--- a/style.css
+++ b/style.css
@@ -31,14 +31,24 @@ header .logo{
 header .logo svg path{
     width: 100%;
     height: 100%;
-    animation: fill .5s ease;
+    animation: fill 18s ease infinite;
     animation-delay: 6s;
-    animation-fill-mode: forwards;
+    /* animation-fill-mode: forwards; */
+    transition: all .5s linear;
 
 }
 @keyframes fill{
-    0%,100%{
+    0%,30%{
         fill:#fff;
+    }
+    30%,50%{
+        fill:blue;
+    } 
+     50%,80%{
+        fill:orange;
+    } 
+     80%,100%{
+        fill:red;
     }
    
 }
@@ -646,12 +656,25 @@ footer .links li a i{
      }
      header .body_style .body_side_style_img .side_style_3{
     
-       
-        width: 150px;
-        height: 200px;
-       
         
+        animation: side_style_3 0.5s linear;
+        animation-delay: 3s;
+        animation-fill-mode: forwards;
+        visibility: hidden;
      }
+     @keyframes side_style_3{
+        0%{
+            visibility: visible;
+            width: 20px;
+            height: 30px;
+        }
+        100%{
+           visibility: visible;
+           width: 120px;
+           height: 180px;
+       }
+    }
+    
      main .main_title_text h2{
     
         padding: 10px;
